try moving workout.js contents into data.js

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -4,10 +4,9 @@
         <title>My Workout</title>
         <link rel="stylesheet" type="text/css"
         href="{{ url_for('static', filename='css/workout.css') }}">
-
         <script type="text/javascript" charset="utf-8"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap" async defer></script>
-        <script src="{{ url_for('static', filename='js/workout.js') }}" language="JavaScript"></script>
+        <script src="{{ url_for('static', filename='js/data.js') }}" language="JavaScript"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
                     integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
                     crossorigin="anonymous"></script>
