--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -24,26 +24,27 @@ h1 {
   width:100%;
   height:100%;
   position: relative;
-  top: 150px;
+  top: 200px;
   text-align: center;
   }
 
 /* left measure: time */
       #time{
-      position: relative;
-      top: 60%;
-      width:30%;
-      height:30%;
-      text-align: center;
-      display: inline-block;
+        position: relative;
+        display: inline-block;
+        top: 80px;
+        left: 50px;
+        width:30%;
+        height:30%;
+        text-align: center;
       }
 
       #timeCircle{
         position: relative;
         display: inline-block;
         top: 8%;
-        width: 200px;
-        height: 200px;
+        width: 180px;
+        height: 180px;
         background-color: #bcabae;
         box-shadow: 0px 0px 10px black;
         border-top-left-radius: 100px;  /* 100px of height + 10px of border */
@@ -52,70 +53,66 @@ h1 {
         border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
       }
 
+      #timeContainer{
+        position: relative;
+        display: inline-block;
+        text-align: center;
+        top:-180px;
+      }
+
       #timeText{
         position: relative;
-        font-size: 48px;
+        font-size: 35px;
         top: 50px;
         color: white;
       }
 
       #timeTextMeasure{
         position: relative;
-        font-size: 24px;
+        font-size: 20px;
         color: white;
       }
 
-/* middle measure: speedometer */
-#myCanvas{
-    position: relative;
-    display: inline-block;
-    text-align: center;
-
-}
 
       #speed{
-      position: relative;
-      top: -100px;
-      width:30%;
-      height:30%;
-      text-align: center;
-      display: inline-block;
+        position: relative;
+        top:50px;
+        display: inline-block;
+        width:250px;
+        height:250px;
+        text-align: center;
       }
 
+      /* middle measure: speedometer */
+      #myCanvas{
+          position: relative;
+          /* display: inline-block; */
+          text-align: center;
+      }
 
       #needle {
         position: absolute;
         width: 10px;
         height: 100px;
         top: 40px;
-        left: 50%;
+        left: 48%;
         background: #eca72c;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         border-top-left-radius: 100%;
         border-top-right-radius: 100%;
-        display: inline-block;
+        /* display: inline-block; */
         -webkit-animation: move 5s infinite;
         transform: rotate(45deg);
         transform-origin: bottom;
       }
 
-      /* #speedCircle{
-        position: relative;
-        top: 10%;
-        background: white;
-        width: 80%;
-        height: 80%;
-        border-radius: 50%;
-        display: inline-block;
-      } */
 
 #speedCircle{
-    /* position: relative; */
+    position: relative;
     display: inline-block;
-    /* top: 8%; */
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     box-shadow: 0px 0px 20px black;
     background-color: #bcabae;
     border-top-left-radius: 200px;  /* 100px of height + 10px of border */
@@ -124,42 +121,39 @@ h1 {
     border-bottom-right-radius: 200px; /* 100px of height + 10px of border */
 }
 
-
-    background-color: transparent;
-    border-top-left-radius: 200px;  /* 100px of height + 10px of border */
-    border-top-right-radius: 200px; /* 100px of height + 10px of border */
-    border: 10px solid white;
-    border-bottom: 0;
-    border-style: dashed;
-    position: relative;
-    /* left: -10px; */
-    display: inline-block;
-    text-align: center;
-} */
+#textContainer{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  top:-140px;
+}
 
       #speedText{
         position: relative;
-        font-size: 48px;
+        display: inline-block;
+        font-size: 35px;
         color: white;
       }
 
       #speedTextMeasure{
         position: relative;
-        top: -50px;
-        font-size: 24px;
+        display: inline-block;
+        font-size: 20px;
         color: white;
+        top:-15px;
       }
 
 
-/* right measure: distance */
 
+/* right indicator: distance */
     #distance{
-    position: relative;
-    top: 100%;
-    width:30%;
-    height:30%;
-    text-align: center;
-    display: inline-block;
+      position: relative;
+      display: inline-block;
+      top:80px;
+      right: 50px;
+      width:30%;
+      height:30%;
+      text-align: center;
     }
 
     #distanceCircle{
@@ -167,8 +161,8 @@ h1 {
       display: inline-block;
       box-shadow: 0px 0px 10px black;
       top: 8%;
-      width: 200px;
-      height: 200px;
+      width: 180px;
+      height: 180px;
       background-color: white;
       border-top-left-radius: 100px;  /* 100px of height + 10px of border */
       border-top-right-radius: 100px; /* 100px of height + 10px of border */
@@ -177,25 +171,39 @@ h1 {
       background-color: #bcabae;
     }
 
+
+    #distContainer{
+      position: relative;
+      display: inline-block;
+      text-align: center;
+      top:-180px;
+    }
+
+
     #distanceText{
       position: relative;
-      font-size: 48px;
+      font-size: 35px;
       top: 50px;
       color: white;
     }
 
     #distanceTextMeasure{
       position: relative;
-      font-size: 24px;
+      font-size: 20px;
       color: white;
     }
 
+
+
+
+/* //pause and stop buttons// */
   #options {
     position: relative;
     top:20px;
     margin: 0 auto;
     text-align: center;
   }
+
 
       #pauseCircle{
         width: 50px;
@@ -291,12 +299,4 @@ h1 {
         display: inline-block;
         margin-top: 100px;
         visibility: hidden;
-}
-
-
-#map {
-    width: 100%;
-    height: 400px;
-    background-color: grey;
-    top:200px;
 }
