--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -307,7 +307,7 @@ h1 {
     width: 100%;
     height: 400px;
     background-color: grey;
-    top:200px;
+    /* top:200px; */
 }
 
 #canvasTime {
