--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -19,7 +19,6 @@ h1 {
   font: helvetica;
   font-size: 50px;
   top: 100px;
-  position: fixed;
 }
 
 
@@ -308,7 +307,7 @@ h1 {
 #map {
     position: fixed;
     width: 100%;
-    height: 400px;
+    height: 100%;
     background-color: grey;
     /* top:200px; */
 }
