--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -307,7 +307,7 @@ h1 {
 #map {
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 800px;
     background-color: grey;
     /* top:200px; */
 }
