removed summary href and added summaryFunction()

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -84,10 +84,9 @@
       </div>
     </div>
 
-    <div id="stopCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/summary">
+    <div id="stopCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()" onclick="summaryFunction()">
       <div id="stopTriangle">
       </div>
-      </a>
     </div>
   </div>
 
