start button goes to start page

--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -16,10 +16,9 @@
 
     <div id="options" >
 
-      <div id="newCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/start">
+      <div id="newCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()" onClick="startPage()">
         <div id="newTriangle">
         </div>
-        </a>
       </div>
     </div>
 
