--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -61,5 +61,10 @@
   </div>
 </div>
 
+<script type="text/javascript" charset="utf-8">
+var distance=localStorage.getItem('Totaldistance');
+console.log(distance);
+</script>
+
   </body>
 </html>
