send distance float to summary.html and stringify there

--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -62,9 +62,11 @@
 
 <script type="text/javascript" charset="utf-8">
 var distance=localStorage.getItem('Totaldistance');
+var distanceString = string(distance);
 var distanceText = document.getElementById("distanceText");
-distText.innerHTML = (distance);
+distText.innerHTML = (distanceString);
 console.log(distance);
+console.log(distanceString);
 </script>
 
   </body>
