--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -351,7 +351,7 @@
     <script type="text/javascript" charset="utf-8">
       function saveMsg(){
         //localStorage.setItem('time', difference);
-        localStorage.setItem('Totaldistance', disDisplay);
+        localStorage.setItem('Totaldistance', totalDis);
         summaryFunction();
       }
       </script>
