--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -62,7 +62,7 @@
 
 <script type="text/javascript" charset="utf-8">
 var distance=localStorage.getItem('Totaldistance');
-var distanceString = string(distance);
+var distanceString = String(distance);
 var distanceText = document.getElementById("distanceText");
 distText.innerHTML = (distanceString);
 console.log(distance);
