--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -64,7 +64,7 @@
 var distance=localStorage.getItem('Totaldistance');
 var distanceString = String(distance);
 var distanceText = document.getElementById("distanceText");
-distText.innerHTML = (distanceString);
+distanceText.innerHTML = (distanceString);
 console.log(distance);
 console.log(distanceString);
 </script>
