--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -352,6 +352,9 @@
       function saveMsg(){
         //localStorage.setItem('time', difference);
         localStorage.setItem('Totaldistance', totalDis);
+        localStorage.setItem('Hours', hours);
+        localStorage.setItem('Minutes', minutes);
+        localStorage.setItem('Seconds', seconds);
         summaryFunction();
       }
       </script>
