--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -321,6 +321,9 @@
         var second = 1000;
         var minute = second * 60;
         var hour = minute * 60;
+        var seconds = 0;
+        var minutes = 0;
+        var hours = 0;
         var container = document.getElementById('timeText');
 
         function stopTimer() {
