--- a/Web3/templates/Workout.html
+++ b/Web3/templates/Workout.html
@@ -12,6 +12,7 @@
 
   <body onload="draw(120);">
 
+
         <h1> My Workout </h1>
 
         <div id="options" >
@@ -30,22 +31,12 @@
           </div>
         </div>
 
-
-  <div id="container", class = "span">
+  <div id="container">
 
     <div id="time">
       <div id="timeCircle">
         <canvas class="canvasTime" id="canvasTime" width="180" height="180">
         </canvas>
-        <div id="timeContainer">
-            <div id="timeText">
-              03:05
-            </div>
-            <div id="timeTextMeasure">
-            </br></br>
-             min:sec
-            </div>
-          </div>
         </div>
     </div>
 
@@ -56,37 +47,47 @@
           </canvas>
               <div id="needle">
               </div>
-                <div id="textContainer">
-                      <div id="speedText">
-                        25
-                      </div>
-                        </br></br>
-                      <div id="speedTextMeasure">
-                        km/h
-                      </div>
-                </div>
-      </div>
-
+              </div>
         </div>
 
     <div id="distance">
       <div id="distanceCircle">
         <canvas class="canvas" id="myDist" width="180" height="180">
         </canvas>
-        <div id="distContainer" >
-          <div id="distanceText">
-            100
-          </div>
-          <div id="distanceTextMeasure">
-          </br></br>
-           meters
-          </div>
-        </div>
       </div>
     </div>
 
+  </div>
 
-    </div>
+            <div id="textInput">
+
+                  <div id="timeInputBox">
+                      <div id="timeText">
+                        03:05
+                      </div>
+                      <div id="timeTextMeasure">
+                       min:sec
+                      </div>
+                  </div>
+
+                  <div id="speedInputBox">
+                      <div id="speedText">
+                        25
+                      </div>
+                      <div id="speedTextMeasure">
+                        km/h
+                      </div>
+                  </div>
+
+                  <div id="distInputBox">
+                      <div id="distanceText">
+                        100
+                      </div>
+                      <div id="distanceTextMeasure">
+                       meters
+                      </div>
+                  </div>
+            </div>
 
     <div id="overlay", onclick="continueFunction()">
     </div>
