--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -20,60 +20,64 @@
 
         <h1> My Workout </h1>
 
-  <div id="container", class = "span">
+        <div id="container">
 
-    <div id="time">
-      <div id="timeCircle">
-        <canvas class="canvasTime" id="canvasTime" width="180" height="180">
-        </canvas>
-        <div id="timeContainer">
-            <div id="timeText">
-              03:05
-            </div>
-            <div id="timeTextMeasure">
-            </br></br>
-             min:sec
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div id="speed">
-      <div id="speedCircle">
-          <canvas class="canvas" id="myCanvas" width="250" height="250">
-        Your browser does not support the HTML5 canvas tag.
-          </canvas>
-              <div id="needle">
+          <div id="time">
+            <div id="timeCircle">
+              <canvas class="canvasTime" id="canvasTime" width="180" height="180">
+              </canvas>
               </div>
-                <div id="textContainer">
-                      <div id="speedText">
-                        25
-                      </div>
-                        </br></br>
-                      <div id="speedTextMeasure">
-                        km/h
-                      </div>
-                </div>
-      </div>
+          </div>
+
+          <div id="speed">
+            <div id="speedCircle">
+                <canvas class="canvas" id="myCanvas" width="250" height="250">
+              Your browser does not support the HTML5 canvas tag.
+                </canvas>
+                    <div id="needle">
+                    </div>
+                    </div>
+              </div>
+
+          <div id="distance">
+            <div id="distanceCircle">
+              <canvas class="canvas" id="myDist" width="180" height="180">
+              </canvas>
+            </div>
+          </div>
 
         </div>
 
-    <div id="distance">
-      <div id="distanceCircle">
-        <canvas class="canvas" id="myDist" width="180" height="180">
-        </canvas>
-        <div id="distContainer" >
-          <div id="distanceText">
-            100
-          </div>
-          <div id="distanceTextMeasure">
-          </br></br>
-           meters
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+                  <div id="textInput">
+
+                        <div id="timeInputBox">
+                            <div id="timeText">
+                              03:05
+                            </div>
+                            <div id="timeTextMeasure">
+                             min:sec
+                            </div>
+                        </div>
+
+                        <div id="speedInputBox">
+                            <div id="speedText">
+                              25
+                            </div>
+                            <div id="speedTextMeasure">
+                              km/h
+                            </div>
+                        </div>
+
+                        <div id="distInputBox">
+                            <div id="distanceText">
+                              100
+                            </div>
+                            <div id="distanceTextMeasure">
+                             meters
+                            </div>
+                        </div>
+                  </div>
+
 
   <div id="options">
 
