try toFixed() on averageSpeedKMH

--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -67,7 +67,7 @@ var minutes = localStorage.getItem('Minutes');
 var seconds = localStorage.getItem('Seconds');
 var totalSeconds = ((hours*3600)+(minutes*60)+seconds);
 var averageSpeedMS = (distance/totalSeconds);
-var averageSpeedKMH = (averageSpeedMS*3.6);
+var averageSpeedKMH = ((averageSpeedMS*3.6).toFixed(2));
 var distanceString = String(distance);
 var timeString = String(hours + ':' + minutes + ':' + seconds);
 var distanceText = document.getElementById("distanceText");
