--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -60,6 +60,11 @@
   </div>
 </div>
 
+<div id="map">
+</div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap" async defer></script>
+
 <script type="text/javascript" charset="utf-8">
 var distance=localStorage.getItem('Totaldistance');
 var hours = localStorage.getItem('Hours');
@@ -73,6 +78,7 @@ var timeString = String(hours + ':' + minutes + ':' + seconds);
 var distanceText = document.getElementById("distanceText");
 var timeText = document.getElementById("timeText");
 var speedText = document.getElementById("speedText");
+var locations = document.getElementById("locations");
 distanceText.innerHTML = (distanceString);
 timeText.innerHTML = (timeString);
 speedText.innerHTML = (averageSpeedKMH);
@@ -80,6 +86,102 @@ speedText.innerHTML = (averageSpeedKMH);
 console.log(distance);
 console.log(distanceString);
 console.log(averageSpeedKMH);
+
+function initMap() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 15,
+    center: locations[0];,
+    styles: [
+        {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+        {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+        {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+        {
+          featureType: 'administrative.locality',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#d59563'}]
+        },
+        {
+          featureType: 'poi',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#d59563'}]
+        },
+        {
+          featureType: 'poi.park',
+          elementType: 'geometry',
+          stylers: [{color: '#263c3f'}]
+        },
+        {
+          featureType: 'poi.park',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#6b9a76'}]
+        },
+        {
+          featureType: 'road',
+          elementType: 'geometry',
+          stylers: [{color: '#38414e'}]
+        },
+        {
+          featureType: 'road',
+          elementType: 'geometry.stroke',
+          stylers: [{color: '#212a37'}]
+        },
+        {
+          featureType: 'road',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#9ca5b3'}]
+        },
+        {
+          featureType: 'road.highway',
+          elementType: 'geometry',
+          stylers: [{color: '#746855'}]
+        },
+        {
+          featureType: 'road.highway',
+          elementType: 'geometry.stroke',
+          stylers: [{color: '#1f2835'}]
+        },
+        {
+          featureType: 'road.highway',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#f3d19c'}]
+        },
+        {
+          featureType: 'transit',
+          elementType: 'geometry',
+          stylers: [{color: '#2f3948'}]
+        },
+        {
+          featureType: 'transit.station',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#d59563'}]
+        },
+        {
+          featureType: 'water',
+          elementType: 'geometry',
+          stylers: [{color: '#17263c'}]
+        },
+        {
+          featureType: 'water',
+          elementType: 'labels.text.fill',
+          stylers: [{color: '#515c6d'}]
+        },
+        {
+          featureType: 'water',
+          elementType: 'labels.text.stroke',
+          stylers: [{color: '#17263c'}]
+        }
+      ]
+    });
+
+        var path = new google.maps.Polyline({
+          path: locations,
+          geodesic: true,
+          strokeColor: '#ad343e',
+          strokeOpacity: 1.0,
+          strokeWeight: 2
+        })
+        path.setMap(map);
+    }
 </script>
 
   </body>
